[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/World/ShootableDoor.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Scenes/World Prefabs/ShootableDoor.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Scenes/World Prefabs/ShootablePlayerCollider.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 16 )

[sub_resource type="Animation" id=4]
resource_name = "Close"
length = 0.9
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 16, 15, 14, 13, 12, 11, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Open"
length = 5.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 4.95 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "door_close"
} ]
}

[node name="ShootableDoor" type="StaticBody2D"]
collision_layer = 3
collision_mask = 2147483648
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 18

[node name="BulletHitbox" type="Area2D" parent="."]
visible = false
position = Vector2( -1, 0 )
collision_layer = 8
collision_mask = 0

[node name="Collider" type="CollisionShape2D" parent="BulletHitbox"]
position = Vector2( 2, 0 )
shape = SubResource( 2 )

[node name="PlayerCollider" parent="." instance=ExtResource( 3 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Close = SubResource( 4 )
anims/Open = SubResource( 1 )
[connection signal="area_entered" from="BulletHitbox" to="." method="_on_BulletHitbox_area_entered"]
